WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
246369
Shadows paint at the wrong scale in replayed CGDisplayLists
https://bugs.webkit.org/show_bug.cgi?id=246369
Summary
Shadows paint at the wrong scale in replayed CGDisplayLists
Tim Horton
Reported
2022-10-11 15:18:46 PDT
Shadows paint at the wrong scale in replayed CGDisplayLists
Attachments
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2022-10-11 15:18:54 PDT
<
rdar://problem/96967173
>
Tim Horton
Comment 2
2022-10-11 15:23:54 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/5263
EWS
Comment 3
2022-10-12 10:47:17 PDT
Committed
255442@main
(ff0ba2bfd3e4): <
https://commits.webkit.org/255442@main
> Reviewed commits have been landed. Closing PR #5263 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug